--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -74,7 +74,7 @@
     bottom: 60%;
     width: 20%;
 }
-.reviewsTitle{
+.reviewsTitle, .reviewsProductName{
     font-size: 140%;
     margin: 2%;
 }
