--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -50,18 +50,18 @@
 }
 .productName{
     font-size: 175%;
-    position: relative;
-    bottom: 40%;
-    right: 24%;
-    border: solid;
-    width: inherit
+    position: fixed;
+    align-items:center;
+    right: 5%;
+    top: 8%;
+    width: inherit;
 
 }
 .reviewsOrderButton{
-    position: relative;
-    bottom: 60%;
+    position: fixed;
+    top: 10%;
     width: 20%;
-
+    position: sticky;
 }
 .reviewsTitle{
     font-size: 140%;
@@ -89,7 +89,7 @@
     text-align: center;
 }
 .reversed{
-    flex-direction: column;
+    flex-direction: column-reverse;
 }
 .row{
     display: flex;
