remove margin on review product name left

--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -80,8 +80,8 @@
     margin: 2%;
 }
 .reviewsProductName{
-    font-size: 180%;
-    margin: 2% 3%;
+    font-size: 170%;
+    margin: 2% 0;
     text-align:left;
 }
 .reviewsOfProduct{
