--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -55,7 +55,11 @@
     font-size: 120%;
 }
 .btnSubmitEditReview{
-    margin:2%;
+    margin:0 2%;
+}
+.btnDummy{
+    margin:0 2%;
+    visibility: hidden;
 }
 .pencilIcon{
     width:20px;
@@ -87,7 +91,7 @@
 .reviewsOfProduct{
     bottom: 40%;
     text-align: left;
-    margin-bottom: 4%;
+    margin-bottom: none;
 
 }
 .reviewsRating{
@@ -97,7 +101,7 @@
     margin: 2%;
 }
 .reviewsDate{
-    margin: 2%;
+    margin: 1% 2%;
     padding: 2px;
 }
 .reviewsDescription{
