--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -88,7 +88,7 @@
     font-size: 170%;
     margin: 2% 0;
     text-align:left;
-    padding-right: 7%;
+    padding: 0 7% 0 2%;
 }
 .reviewsOfProduct{
     bottom: 40%;
