--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -61,14 +61,19 @@
     margin:0 2%;
     visibility: hidden;
 }
-.pencilIcon{
-    width:20px;
-    height:20px;
-    margin-left: 20px;
-  }
-.pencilIcon:hover{
-   color: rgb(65, 65, 65);
+.deleteIcon{
+    width:1em;
+    height:1em;
+    margin-left:1em;
 }
+.pencilIcon{
+    width:1em;
+    height:1em;
+    margin-left:1em;
+  }
+  .pencilIcon:hover, .deleteIcon:hover{
+    color: rgb(65, 65, 65);
+  }
 .productName{
     font-size: 200%;
     border: none;
