--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -25,13 +25,14 @@
     max-height: 100%;
     margin:10px;
     color: #1d2228;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 .reviewscloseButton {
     background-color: transparent;
-    position: absolute;
+    position: fixed;
     font-size: 1.5em;
-    right:10px;
+    right:30px;
     top:10px;
     color: #1d2228;
     border: none;
@@ -43,10 +44,12 @@
 
 .reviewsModal-header{
     flex:2 1 50%;
-    height: 50%;
+    height:fit-content;
     text-align: center;
     display: flex;
     font-size: 120%;
+    
+    
 }
 .productName{
     font-size: 175%;
@@ -54,14 +57,18 @@
     align-items:center;
     right: 5%;
     top: 8%;
-    width: inherit;
-
+    width:80%;
+    z-index: 10;
 }
 .reviewsOrderButton{
+    background: inherit;
     position: fixed;
-    top: 10%;
+    top: 20%;
+    right: 45%;
     width: 20%;
-    position: sticky;
+    overflow:hidden;
+    /* position: sticky; */
+ 
 }
 .reviewsTitle{
     font-size: 140%;
@@ -82,11 +89,19 @@
     margin: 2%;
 }
 .reviewsModal-body{
-    flex: 1 1 60%;
+    /* flex: 1 1 60%; */
+    /* inline-size: min-content; */
+    position: relative;
+    top: 30%;
+    overflow: hidden;
     display: flex;
-    height: 60%;
-    flex-direction: column;
+    height:auto;
+    width:100%;
+    flex-direction:column;
     text-align: center;
+    /* margin-top: 10px; */
+    overflow:  auto;
+   
 }
 .reversed{
     flex-direction: column-reverse;
