--- a/src/components/create-review/CreateReview.module.css
+++ b/src/components/create-review/CreateReview.module.css
@@ -20,8 +20,30 @@
     box-sizing: border-box;
 }
 
+/******************************
+Errors
+*/
+
 .error_item {
     color:red;
     /* margin:3px 0px 0px 0px; */
     /* width: 120%; */
+}
+
+.inputError {
+    margin-top: .5em;
+    width: 100%;
+    height: 30px;
+    padding: .5em;
+    box-sizing: border-box;
+    border: 1px solid red;
+}
+
+.inputErrorTA {
+    margin-top: .5em;
+    width: 100%;
+    height: 30px;
+    padding: .5em;
+    box-sizing: border-box;
+    border: 1px solid red;
 }
