--- a/src/components/create-review/CreateReview.module.css
+++ b/src/components/create-review/CreateReview.module.css
@@ -20,6 +20,16 @@
     box-sizing: border-box;
 }
 
+.labelContents {
+    display:inline-flex;
+}
+.count {
+    margin-left: 18em;
+}
+.titleCount {
+    margin-left: 19em;
+}
+
 /******************************
 Errors
 */
