--- a/src/components/create-review/CreateReview.module.css
+++ b/src/components/create-review/CreateReview.module.css
@@ -6,6 +6,7 @@
 }
 
 .input {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New";
     margin-top: .5em;
     width: 100%;
     height: 30px;
@@ -13,6 +14,7 @@
     box-sizing: border-box;
 }
 .inputTextArea{
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New";
     margin-top: .5em;
     width: 100%;
     height: 30px;
@@ -41,6 +43,7 @@ Errors
 }
 
 .inputError {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New";
     margin-top: .5em;
     width: 100%;
     height: 30px;
@@ -50,6 +53,7 @@ Errors
 }
 
 .inputErrorTA {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New";
     margin-top: .5em;
     width: 100%;
     height: 30px;
