--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -71,8 +71,8 @@
     margin-left:1em;
 }
 .pencilIcon{
-    width:1em;
-    height:1em;
+    width:20px;
+    height:20px;
     margin-left:1em;
   }
   .pencilIcon:hover, .deleteIcon:hover{
@@ -92,6 +92,7 @@
     font-size: 140%;
     margin: 2%;
     padding:5px;
+    min-width:80px;
 }
 .reviewsProductName{
     font-size: 170%;
@@ -149,6 +150,11 @@
 }
 .starRating{
     color:white;
+}
+.titleContainer{
+    display:flex;
+    flex-direction: row;
+    align-items:center;
 }
 
 
