--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -136,7 +136,7 @@ input[type=number] {
     position: relative;
     left: 5%;
     width: 75%;
-    display: none;
+    /* visibility: hidden; */
 }
 
 .addReviewsProductCardButton{
