change review button

--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -145,7 +145,7 @@ input[type=number] {
     /* color: #E1E2E2 */
     /* position: relative; */
     left: 5%;
-    width: 100%;
+    width: 136px;
 }
 
 .reviewsProductCardButton:hover {
@@ -162,6 +162,6 @@ input[type=number] {
     /* color: #E1E2E2 */
     /* position: relative; */
     left: 5%;
-    width: 100%;
+    width: 136px;
 }
 
