--- a/src/components/create-review/CreateReview.module.css
+++ b/src/components/create-review/CreateReview.module.css
@@ -16,7 +16,7 @@
 .inputTextArea{
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New";
     margin-top: .5em;
-    width: 460px;
+    width: 100%;
     height: 30px;
     padding: .5em;
     box-sizing: border-box;
