--- a/src/components/Profile/ProfilePage.css
+++ b/src/components/Profile/ProfilePage.css
@@ -1,4 +1,7 @@
-
+.listDiv{
+    align-items: center;
+    align-self: center;
+}
 .error_item{
   color:red;
   margin:3px 0px 0px 0px;
@@ -7,9 +10,10 @@
 .edit {
     left: 10em;
     top: 1em;
+    z-index: 3;
 }
 .submit{
-    bottom: 26em;
+    bottom: 25.3em;
     left: 12em;
 }
 
@@ -58,6 +62,7 @@ width: 150px;
     color: #1d2228;
     width: 400px;
     height: 6em;
+    margin-left: 10.7em;
 }
 
 .profile{
