--- a/src/components/maintenance-page/MaintenancePage.css
+++ b/src/components/maintenance-page/MaintenancePage.css
@@ -33,6 +33,10 @@ tbody {
     padding: 10vh, 10vw;
     }
 
+.ProductCells{
+    padding: 2px 5px 2px 5px;
+    text-align: center;
+}
 .ProductTable{
     max-width: 95vw;
     max-height: 40vw;
@@ -41,8 +45,7 @@ tbody {
     margin-left: auto;
     margin-right: auto;
     margin-top: .70vw;
-    position: relative
-    
+    position: relative;
 }
 .Buttons{
     margin-left: 2vw;
@@ -54,28 +57,32 @@ height: 100%;
 height:100%;
 }
 #check{
-    width: 20px;
+    width: 25px;
     height: 100%;
 }
 #checkButton{
+    padding: 2px 4px 2px 2px;
     position: relative;
     width: 50%;
-    top: 2.2px;
+    top: 3.5px;
     height: 100%;
     border: none;
     color: green;
     background:none;
     outline: none;
+    margin-bottom: .6px;
 }
 #X{
+    padding: 2px 1px 2px 1px;
     font-weight: bold;
-    width: 50%;
+    font-size: 25px;
+    width: 25px;
     height: 100%;
-    font-size: 20px;
     border:none;
     color: red;
     background: none;
     outline:none;
+    margin-bottom: .6px;
 }
 .editbutton{
 width: 100%;
@@ -104,6 +111,11 @@ width: 100%;
     justify-self: center;
     width: 10em;
     position: static;
+}
+.editable {
+    border-width: .8px;
+    height: 34.3px;
+    border-color: #fb8122;
 }
 .Maintenance{
     margin-top: 100px;
