--- a/src/components/maintenance-page/MaintenancePage.css
+++ b/src/components/maintenance-page/MaintenancePage.css
@@ -34,7 +34,7 @@ tbody {
     }
 
 .ProductCells{
-    padding: 2px 5px 2px 5px;
+    padding: 12px 18px 12px 18px;
     text-align: center;
 }
 .ProductTable{
@@ -57,47 +57,49 @@ height: 100%;
 height:100%;
 }
 #check{
+    position: relative;
     width: 25px;
     height: 100%;
+    cursor:pointer;
 }
 #checkButton{
-    padding: 2px 4px 2px 2px;
+    padding: 2px 24px 2px 8px;
     position: relative;
-    width: 50%;
+    width: 25px;
     top: 3.5px;
     height: 100%;
     border: none;
     color: green;
     background:none;
     outline: none;
-    margin-bottom: .6px;
+    cursor:pointer;
 }
 #X{
-    padding: 2px 1px 2px 1px;
+    padding: 2px 8px 2px 8px;
     font-weight: bold;
     font-size: 25px;
-    width: 25px;
     height: 100%;
     border:none;
     color: red;
     background: none;
     outline:none;
-    margin-bottom: .6px;
+    cursor: pointer;
 }
 .editbutton{
-width: 100%;
-  border: none;
-    padding: 0;
+    width: 100%;
+    border: none;
+    padding: 1px;
     background:none;
     outline: none;
+    cursor: pointer;
 }
 .editIcon{
     border: none;
-    padding: 0;
     background:none;
     outline: none;
-   width: 33px;
-   height: 30px; 
+    width: 100px;
+    height: 30px; 
+    cursor: pointer;
 
 }
 
@@ -113,9 +115,9 @@ width: 100%;
     position: static;
 }
 .editable {
-    border-width: .8px;
+    border-width: 1.5px;
     height: 34.3px;
-    border-color: #fb8122;
+    border-color: #fb8122 !important;
 }
 .Maintenance{
     margin-top: 100px;
