--- a/src/components/checkout-page/ConfirmModal.css
+++ b/src/components/checkout-page/ConfirmModal.css
@@ -7,7 +7,7 @@
 }
 .confirmModalContent{
     display: flex;
-    height:200px;
+    height:150px;
     width: 250px;
     border-radius: 0.5em;
     background-color:white;
@@ -22,6 +22,7 @@
 }
 .confirmModalHeader{
     flex:1 1 50%;
+    margin-top: 1.55em;
     height: 5em;
     text-align: center;
     display:flex;
@@ -55,9 +56,25 @@
     max-height: 2.5em;
     max-width: 7em;
     margin-top: 1em;
+    background: #666666;
+    border-radius: 20px;
+    color: #EEEEEE;
+    cursor: pointer;
+    font-weight: 600px;
+    height: 3em;
+    justify-self: center;
+    width: 75%;
 }
 .confirmModalCancel{
     max-height: 2.5em;
     max-width: 7em;
     margin-top: 1em;
+    background: #666666;
+    border-radius: 20px;
+    color: #EEEEEE;
+    cursor: pointer;
+    font-weight: 600px;
+    height: 3em;
+    justify-self: center;
+    width: 75%;
 }
