added error message for title

--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -108,6 +108,7 @@
     margin: 2%;
     padding:5px;
     min-width:80px;
+    max-width: 12em;
 }
 .reviewsProductName{
     font-size: 170%;
@@ -233,4 +234,12 @@ input[type=number] {
     left: 5%;
     width: 136px;
 }
-
+.titleErrorContainer{
+    max-width: 5em;
+}
+.hidden{
+    display: none;
+}
+.red{
+    color:red;
+}
