--- a/src/components/maintenance-page/MaintenancePage.css
+++ b/src/components/maintenance-page/MaintenancePage.css
@@ -63,8 +63,9 @@ height:100%;
     cursor:pointer;
 }
 #checkButton{
-    padding: 2.15px 24px 2.15px 8px;
+    padding: 2.2px 24px 2.25px 8px;
     position: relative;
+    margin-top: .05px;
     width: 25px;
     top: 3.5px;
     height: 100%;
@@ -79,13 +80,14 @@ height:100%;
     font-size: 14px;
 }
 #X{
-    padding: 1.6px 8px 1.6px 8px;
+    padding: 2.1px 8px 2px 8px;
     font-weight: bold;
     font-size: 25px;
     height: 100%;
     border:none;
     color: red;
     background: none;
+    margin-bottom: .35px;
     outline:none;
     cursor: pointer;
 }
