--- a/src/components/maintenance-page/MaintenancePage.css
+++ b/src/components/maintenance-page/MaintenancePage.css
@@ -63,12 +63,11 @@ height:100%;
     cursor:pointer;
 }
 #checkButton{
-    padding: 2.2px 24px 2.25px 8px;
+    padding: 1.7px 24px 1.5px 8px;
     position: relative;
-    margin-top: .05px;
-    width: 25px;
-    top: 3.5px;
-    height: 100%;
+    width: 24.7px;
+    top: 5.5px;
+    height: 90%;
     border: none;
     color: green;
     background:none;
@@ -80,14 +79,15 @@ height:100%;
     font-size: 14px;
 }
 #X{
-    padding: 2.1px 8px 2px 8px;
+    position: relative;
+    vertical-align: auto;
+    padding: 1.7px 8px 1.5px 8px;
     font-weight: bold;
-    font-size: 25px;
-    height: 100%;
+    font-size: 24.7px;
+    height: 90%;
     border:none;
     color: red;
     background: none;
-    margin-bottom: .35px;
     outline:none;
     cursor: pointer;
 }
@@ -108,7 +108,14 @@ height:100%;
     cursor: pointer;
 
 }
-
+#activeView{
+    padding: 12px 28px 12px 28px;
+    text-align: center;
+}
+#demographicView{
+    padding: 12px 28px 12px 28px;
+    text-align: center;
+}
 .createButton, .promoButton{
     background: #666666;
     border-radius: 20px;
