--- a/src/components/checkout-page/ConfirmModal.css
+++ b/src/components/checkout-page/ConfirmModal.css
@@ -7,7 +7,7 @@
 }
 .confirmModalContent{
     display: flex;
-    height:150px;
+    height:170px;
     width: 250px;
     border-radius: 0.5em;
     background-color:white;
@@ -29,7 +29,8 @@
     align-items: center;
 }
 .confirmModalTitle{
-
+    padding-left: .5em;
+    padding-right: .5em;
 }
 .closeConfirmModalButton{
     background-color: transparent;
