review stars are in place on product modal. The modal is finally closing on button click of the stars WITHIN modal but now the reviews modal is not popping up.

--- a/src/components/product-page/ProductCardModal.css
+++ b/src/components/product-page/ProductCardModal.css
@@ -143,6 +143,7 @@
 }
 .addToCart{
     margin-left: 1em;
+    display: inline-flex;
 }
 .raiseQuantity{
     width:1.5em;
@@ -164,6 +165,11 @@
     border-radius: 10px;
     background-color: transparent;
     border:none;
+}
+.productModalReviews {
+    position: relative;
+    left: 10%;
+    top: 30%;
 }
 .lowerQuantityBtn:hover{
     background-color: rgba(0,0,0,0.1);
