adjust css to better fit ConfirmModal text

--- a/src/components/checkout-page/ConfirmModal.css
+++ b/src/components/checkout-page/ConfirmModal.css
@@ -29,6 +29,8 @@
     align-items: center;
 }
 .confirmModalTitle{
+    padding-left: .5em;
+    padding-right: .5em;
 
 }
 .closeConfirmModalButton{
