all of the AC for card has been met. Needed to just pass in props correctly and that fixed the entire issue with getting average to show for product modal stars. Will continue to work on getting proper CSS styling.

--- a/src/components/product-page/ProductCardModal.css
+++ b/src/components/product-page/ProductCardModal.css
@@ -168,7 +168,12 @@
 }
 .productModalReviews {
     position: relative;
-    left: 10%;
+    left: 5%;
+    top: 25%;
+}
+.productReviewCounter{
+    position: relative;
+    left: 90%;
     top: 30%;
 }
 .lowerQuantityBtn:hover{
