--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -244,7 +244,7 @@ input[type=number] {
     position: relative;
     left: 15%;
 }
-.editable{
+.editableField{
     border: 2px solid gray;
 }
 .redBorder{
