--- a/src/components/product-page/ProductCardModal.css
+++ b/src/components/product-page/ProductCardModal.css
@@ -132,17 +132,19 @@
 .quantityPicker{
     display:inline-flex;
     align-items: center;
-    margin-left: 5%;
+    margin-left: 14%;
 }
 .quantityInput{
     border: 0.5px solid black;
-    width: 40px;
+    border-right: none;
+    border-top: none;
+    border-left: none;
+    width: 35px;
     margin-left: 0.2em;
     margin-right: 0.2em;
     text-align: center;
 }
 .addToCart{
-    margin-left: 1em;
     display: inline-flex;
 }
 .raiseQuantity{
